# Resell

./: .env.example  .gitignore  README.md  REGOLE.txt  docker-compose.yml
back2/: project.tgz
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/core/: database.py  settings.py
backend/app/routers/: inventory.py
backend/app/schemas/: product.py
backend/app/services/: shopify_service.py
backend/app/tests/: test_health.py
caddy/: Caddyfile
nucizzz-ims/backend/: .dockerignore  .env  Dockerfile  pyproject.toml  requirements.txt  test.db
nucizzz-ims/backend/app/: _init_.py  auth.py  barcode_lookup.py  config.py  crud.py  database.py  db.py  main.py  models.py  sales_log.py  schemas.py  security.py  shopify.py
nucizzz-ims/backend/app/api/routes/: __init__.py  barcode.py  health.py
nucizzz-ims/backend/app/core/: __init__.py  config.py  rate_limit.py
nucizzz-ims/backend/app/diagnostics/: verify_barcode_integration.py
nucizzz-ims/backend/app/integrations/: __init__.py
nucizzz-ims/backend/app/integrations/barcode/: __init__.py
nucizzz-ims/backend/app/integrations/barcode/open/: __init__.py  open_product_data.py  openfoodfacts.py
nucizzz-ims/backend/app/models/: __init__.py  product_dto.py
nucizzz-ims/backend/app/routers/: locations.py  products.py  shopify.py  stock.py  uploads.py
nucizzz-ims/backend/app/schemas/: product.py
nucizzz-ims/backend/app/services/: barcode_lookup.py  lookup.py
nucizzz-ims/backend/app/utils/: http.py
nucizzz-ims/backend/tests/: test_gtin.py
(+152 files in other folders)
