[tool.poetry]
name = "resell-backend"
version = "0.1.0"
description = "Backend API for the reselling management system"
authors = ["Resell Ops <ops@nucizzz.shop>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
sqlalchemy = "^2.0"
asyncpg = "^0.29.0"
psycopg = {version = "^3.1", extras = ["binary"]}
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"
ruff = "^0.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
