[tool.poetry]
name = "nucizzz-ims-backend"
version = "0.1.0"
description = "FastAPI backend for store IMS with barcode lookup"
authors = ["You <you@example.com>"]
packages = [{include="app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras=["standard"], version="^0.30.0"}
pydantic = "^2.6.0"
SQLAlchemy = "^2.0.30"
psycopg = {version="^3.1.18", extras=["binary"]}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"